# DocNexus_Agentic_Speaker_Extraction

./: README.md
Agentic_Speaker_Extraction/backend/: .env.example  alembic.ini  pyproject.toml
Agentic_Speaker_Extraction/backend/alembic/: env.py
Agentic_Speaker_Extraction/backend/alembic/versions/: 20260301_000001_init.py  20260301_000002_home_url_refactor.py  20260302_000003_conference_identity_fields.py  20260303_000004_add_scrape_run_conference_name.py  20260303_000005_physician_profile_fields.py  20260303_000006_physician_photo_bio_fields.py  20260303_000007_navigation_template_memory.py  20260303_000008_scrub_physician_photo_fields.py
Agentic_Speaker_Extraction/backend/app/: config.py  db.py  main.py
Agentic_Speaker_Extraction/backend/app/api/: conferences.py  physicians.py  scrape_runs.py
Agentic_Speaker_Extraction/backend/app/models/: __init__.py  entities.py  enums.py
Agentic_Speaker_Extraction/backend/app/schemas/: conferences.py  physicians.py  scrape_runs.py
Agentic_Speaker_Extraction/backend/app/services/: attribution_llm.py  backfill.py  conference_identity.py  crawl_fetch.py  dashboard_overview.py  data_admin.py  dedupe.py  extract_candidates.py  extract_llm.py  extractor_agent.py  fetchers.py  frontier.py  interaction_explorer.py  llm_response.py  (+13 more)
Agentic_Speaker_Extraction/backend/tests/: conftest.py  test_backfill.py  test_data_admin.py  test_llm_routing_and_response.py  test_memory_store.py  test_name_quality.py  test_page_reasoner.py  test_physician_enrichment.py  test_pipeline_and_physicians.py  test_schema_and_api.py  test_services.py
(+30 files in other folders)
