[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conference-harvester-backend"
version = "0.1.0"
description = "Light Conference Speaker Harvester backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "playwright>=1.46.0",
  "playwright-stealth>=2.0.2",
  "seleniumbase>=4.38.0",
  "crawl4ai>=0.4.3",
  "chardet>=5.2.0,<6",
  "pdfplumber>=0.11.4",
  "rapidfuzz>=3.9.6",
  "google-search-results>=2.4.2"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
